* uxtheme moved from Lazarus.  * Disabled (ifdeffed) lock around init/finalization because of circular     reference between fcl-base and winunits-base. If needed it can be     recoded directly using system specific (windows.pas) routines.
git-svn-id: trunk@13197 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -4765,6 +4765,7 @@ packages/winunits-base/src/richedit.pp svneol=native#text/plain
 packages/winunits-base/src/shellapi.pp svneol=native#text/plain
 packages/winunits-base/src/shfolder.pp svneol=native#text/plain
 packages/winunits-base/src/shlobj.pp svneol=native#text/plain
+packages/winunits-base/src/uxtheme.pp svneol=native#text/plain
 packages/winunits-base/src/wininet.pp svneol=native#text/plain
 packages/winunits-base/src/winver.pp svneol=native#text/plain
 packages/winunits-base/tests/OOHelper.pp svneol=native#text/plain
