* Added .txt extension to README_DOM (this one was missed while fixing Mantis #12358)
git-svn-id: trunk@13215 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1679,7 +1679,7 @@ packages/fcl-xml/src/xmlutils.pp svneol=native#text/plain
 packages/fcl-xml/src/xmlwrite.pp svneol=native#text/plain
 packages/fcl-xml/src/xpath.pp svneol=native#text/plain
 packages/fcl-xml/tests/README.txt svneol=native#text/plain
-packages/fcl-xml/tests/README_DOM svneol=native#text/plain
+packages/fcl-xml/tests/README_DOM.txt svneol=native#text/plain
 packages/fcl-xml/tests/api.xml svneol=native#text/plain
 packages/fcl-xml/tests/domunit.pp svneol=native#text/plain
 packages/fcl-xml/tests/template.xml svneol=native#text/plain
