* when optimizing temp assignments by simply replacing one temp with     another, it's not enough that the temp sizes are the same, because     the assignment may only apply to part of them. In such cases,     perform a regular copy (mantis #13948)
git-svn-id: trunk@13255 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -9158,6 +9158,7 @@ tests/webtbs/tw13763.pp svneol=native#text/plain
 tests/webtbs/tw13813.pp svneol=native#text/plain
 tests/webtbs/tw13820.pp svneol=native#text/plain
 tests/webtbs/tw13890.pp svneol=native#text/plain
+tests/webtbs/tw13948.pp svneol=native#text/plain
 tests/webtbs/tw1398.pp svneol=native#text/plain
 tests/webtbs/tw1401.pp svneol=native#text/plain
 tests/webtbs/tw1407.pp svneol=native#text/plain
