--- a/.gitattributes
+++ b/.gitattributes
@@ -9165,6 +9165,7 @@ tests/webtbs/tw1398.pp svneol=native#text/plain
 tests/webtbs/tw13984.pp svneol=native#text/plain
 tests/webtbs/tw13992a.pp svneol=native#text/plain
 tests/webtbs/tw1401.pp svneol=native#text/plain
+tests/webtbs/tw14019.pp svneol=native#text/plain
 tests/webtbs/tw1407.pp svneol=native#text/plain
 tests/webtbs/tw1408.pp svneol=native#text/plain
 tests/webtbs/tw1409.pp svneol=native#text/plain
