* do not mark all found files with Find* as "faHidden" if the search path     starts with './' (mantis #14020)   * also mark files whose name starts with '.' that are found in subdirectories     as faHidden (not reported, but was due to a similar error)   - removed some unused variables related to the Find* functionality
git-svn-id: trunk@13307 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -9166,6 +9166,8 @@ tests/webtbs/tw13984.pp svneol=native#text/plain
 tests/webtbs/tw13992a.pp svneol=native#text/plain
 tests/webtbs/tw1401.pp svneol=native#text/plain
 tests/webtbs/tw14019.pp svneol=native#text/plain
+tests/webtbs/tw14020.pp svneol=native#text/plain
+tests/webtbs/tw14020a.pp svneol=native#text/plain
 tests/webtbs/tw1407.pp svneol=native#text/plain
 tests/webtbs/tw1408.pp svneol=native#text/plain
 tests/webtbs/tw1409.pp svneol=native#text/plain
