--- a/.gitattributes
+++ b/.gitattributes
@@ -6019,26 +6019,27 @@ rtl/morphos/varutils.pp svneol=native#text/plain
 rtl/morphos/video.pp svneol=native#text/plain
 rtl/morphos/videodata.inc svneol=native#text/plain
 rtl/nds/Makefile svneol=native#text/plain
-rtl/nds/Makefile.fpc -text
-rtl/nds/classes.pp -text
+rtl/nds/Makefile.fpc svneol=native#text/plain
+rtl/nds/classes.pp svneol=native#text/plain
 rtl/nds/cprt07.as svneol=native#text/plain
 rtl/nds/cprt09.as svneol=native#text/plain
-rtl/nds/dos.pp -text
+rtl/nds/dos.pp svneol=native#text/plain
 rtl/nds/nds.inc svneol=native#text/plain
-rtl/nds/ndsbios.inc -text
-rtl/nds/ndsbiosh.inc -text
+rtl/nds/ndsbios.inc svneol=native#text/plain
+rtl/nds/ndsbiosh.inc svneol=native#text/plain
 rtl/nds/ndsh.inc svneol=native#text/plain
 rtl/nds/prt07.as svneol=native#text/plain
 rtl/nds/prt09.as svneol=native#text/plain
-rtl/nds/sysdir.inc -text
-rtl/nds/sysfile.inc -text
+rtl/nds/sysdir.inc svneol=native#text/plain
+rtl/nds/sysfile.inc svneol=native#text/plain
 rtl/nds/sysheap.inc svneol=native#text/x-pascal
-rtl/nds/sysos.inc -text
-rtl/nds/sysosh.inc -text
+rtl/nds/sysos.inc svneol=native#text/plain
+rtl/nds/sysosh.inc svneol=native#text/plain
+rtl/nds/system.pp svneol=native#text/plain
 rtl/nds/systhrd.inc svneol=native#text/plain
-rtl/nds/sysutils.pp -text
-rtl/nds/tthread.inc -text
-rtl/nds/varutils.pp -text
+rtl/nds/sysutils.pp svneol=native#text/plain
+rtl/nds/tthread.inc svneol=native#text/plain
+rtl/nds/varutils.pp svneol=native#text/plain
 rtl/netbsd/Makefile svneol=native#text/plain
 rtl/netbsd/Makefile.fpc svneol=native#text/plain
 rtl/netbsd/errno.inc svneol=native#text/plain
