* no longer allow assigning values to typecasted properties, because in     case the getter is a function, the result is that first the getter is     called, and subsequently the temp holding the function result is     overwritten (thus not changing anything). This is Delphi-compatible,     and fixes tests/tbf/tb0214*
git-svn-id: trunk@13320 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -6977,6 +6977,7 @@ tests/tbf/tb0211a.pp svneol=native#text/plain
 tests/tbf/tb0212.pp svneol=native#text/plain
 tests/tbf/tb0213.pp svneol=native#text/plain
 tests/tbf/tb0214.pp svneol=native#text/plain
+tests/tbf/tb0214a.pp svneol=native#text/plain
 tests/tbf/tb0215.pp svneol=native#text/plain
 tests/tbf/tb0215a.pp svneol=native#text/plain
 tests/tbf/tb0215b.pp svneol=native#text/plain
