--- a/.gitattributes
+++ b/.gitattributes
@@ -9172,6 +9172,7 @@ tests/webtbs/tw1401.pp svneol=native#text/plain
 tests/webtbs/tw14019.pp svneol=native#text/plain
 tests/webtbs/tw14020.pp svneol=native#text/plain
 tests/webtbs/tw14020a.pp svneol=native#text/plain
+tests/webtbs/tw14040.pp svneol=native#text/plain
 tests/webtbs/tw1407.pp svneol=native#text/plain
 tests/webtbs/tw1408.pp svneol=native#text/plain
 tests/webtbs/tw1409.pp svneol=native#text/plain
