* don't allow skipping property parameters if the getter/setter has default     parameters (mantis #13956)   * when reporting an error about too few specified parameters to a call,     return the column of the call itself rather than after the last parameter     (because this ends up after the end of an indexed property in case of      properties, which is confusing)
git-svn-id: trunk@13326 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8605,6 +8605,7 @@ tests/webtbf/tw13563a.pp svneol=native#text/plain
 tests/webtbf/tw1365.pp svneol=native#text/plain
 tests/webtbf/tw13815.pp svneol=native#text/plain
 tests/webtbf/tw1395.pp svneol=native#text/plain
+tests/webtbf/tw13956.pp svneol=native#text/plain
 tests/webtbf/tw13992.pp svneol=native#text/plain
 tests/webtbf/tw1407.pp svneol=native#text/plain
 tests/webtbf/tw1432.pp svneol=native#text/plain
