--- a/.gitattributes
+++ b/.gitattributes
@@ -6984,6 +6984,7 @@ tests/tbf/tb0215b.pp svneol=native#text/plain
 tests/tbf/tb0215c.pp svneol=native#text/plain
 tests/tbf/tb0215d.pp svneol=native#text/plain
 tests/tbf/tb0215e.pp svneol=native#text/plain
+tests/tbf/tb0216.pp svneol=native#text/plain
 tests/tbf/ub0115.pp svneol=native#text/plain
 tests/tbf/ub0149.pp svneol=native#text/plain
 tests/tbf/ub0158a.pp svneol=native#text/plain
@@ -7099,7 +7100,6 @@ tests/tbs/tb0110.pp svneol=native#text/plain
 tests/tbs/tb0111.pp svneol=native#text/plain
 tests/tbs/tb0112.pp svneol=native#text/plain
 tests/tbs/tb0113.pp svneol=native#text/plain
-tests/tbs/tb0114.pp svneol=native#text/plain
 tests/tbs/tb0115.pp svneol=native#text/plain
 tests/tbs/tb0116.pp svneol=native#text/plain
 tests/tbs/tb0117.pp svneol=native#text/plain
