+ tests for previous commit
git-svn-id: trunk@13373 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8610,6 +8610,9 @@ tests/webtbf/tw1395.pp svneol=native#text/plain
 tests/webtbf/tw13956.pp svneol=native#text/plain
 tests/webtbf/tw13992.pp svneol=native#text/plain
 tests/webtbf/tw1407.pp svneol=native#text/plain
+tests/webtbf/tw14104a.pp svneol=native#text/plain
+tests/webtbf/tw14104b.pp svneol=native#text/plain
+tests/webtbf/tw14104c.pp svneol=native#text/plain
 tests/webtbf/tw1432.pp svneol=native#text/plain
 tests/webtbf/tw1467.pp svneol=native#text/plain
 tests/webtbf/tw1483.pp svneol=native#text/plain
