--WARNING: start build process with FPC 2.2.4; won't work when      starting with a previous 2.3.1 or compiler built from the objc branch   + added basic objcprotocol support (only for external protocols     currently)      o use in type declaration: "type xp = objcprotocol ... end;"      o when defining a root class that implements it:        "type yc = objcclass(xp) ... end" (note: no support yet        for something like "objcclass(id,xp)" or so)      o when defining a non-root class that implements a protocol:        "type zc = objcclass(nsobject,xp) ... end"      o includes support for "required" and "optional" sections      o no support yet for the objcprotocol(<protocol>) expression        that enables getting a class instance representing the        protocol (e.g., for use with "conformsToProtocol:")      o message names have to specified in protocol declarations,        but if an objcclass implements a protocol, the message names do        not have to be repeated (but if they are, they have to match;        the same goes when overriding inherited methods)   + allow specifying the external name of Objective-C classes and     protocols, since classes and protocols can have the same name     (and you cannot use the same Pascal identifier in such caseq)   + added NSObject protocol, and make the NSObject class use it   + added missing NSObject class methods that have the same name     as instance methods (added "class" name prefix to avoid clashes)   * fixed several cases where the compiler did not treat Objective-C     classes/protocols the same as Object Pascal classes/interfaces     (a.o., forward declarations, alignment, regvars, several type      conversions, ...)   * allow "override" directive in objcclass declarations, and print     a hint if it's forgotten in an external declaration (because it     doesn't really matter there, and may make automated header     conversion harder than necessary) and an error if will be used in     a non-external declaratio

--- a/.gitattributes
+++ b/.gitattributes
@@ -8206,6 +8206,18 @@ tests/test/tobjc2.pp svneol=native#text/plain
 tests/test/tobjc3.pp svneol=native#text/plain
 tests/test/tobjc4.pp svneol=native#text/plain
 tests/test/tobjc4a.pp svneol=native#text/plain
+tests/test/tobjc5.pp svneol=native#text/plain
+tests/test/tobjc5a.pp svneol=native#text/plain
+tests/test/tobjc6.pp svneol=native#text/plain
+tests/test/tobjc7.pp svneol=native#text/plain
+tests/test/tobjc7a.pp svneol=native#text/plain
+tests/test/tobjc7b.pp svneol=native#text/plain
+tests/test/tobjc7c.pp svneol=native#text/plain
+tests/test/tobjc8.pp svneol=native#text/plain
+tests/test/tobjc8a.pp svneol=native#text/plain
+tests/test/tobjc9.pp svneol=native#text/plain
+tests/test/tobjc9a.pp svneol=native#text/plain
+tests/test/tobjc9b.pp svneol=native#text/plain
 tests/test/tobject1.pp svneol=native#text/plain
 tests/test/tobject2.pp svneol=native#text/plain
 tests/test/tobject3.pp svneol=native#text/plain
