--- a/.gitattributes
+++ b/.gitattributes
@@ -8481,6 +8481,8 @@ tests/test/units/system/tres2.txt -text
 tests/test/units/system/tres2ext.pp svneol=native#text/plain
 tests/test/units/system/tres3.pp svneol=native#text/plain
 tests/test/units/system/tres3ext.pp svneol=native#text/plain
+tests/test/units/system/tres4.pp svneol=native#text/plain
+tests/test/units/system/tres4.res -text
 tests/test/units/system/tresb.rc svneol=native#text/plain
 tests/test/units/system/tresb.res -text
 tests/test/units/system/tresext.pp svneol=native#text/plain
