* accept const <guid const> = <guid string>; again, resolves #14134
git-svn-id: trunk@13384 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -9189,6 +9189,7 @@ tests/webtbs/tw1407.pp svneol=native#text/plain
 tests/webtbs/tw1408.pp svneol=native#text/plain
 tests/webtbs/tw1409.pp svneol=native#text/plain
 tests/webtbs/tw1412.pp svneol=native#text/plain
+tests/webtbs/tw14134.pp svneol=native#text/plain
 tests/webtbs/tw1414.pp svneol=native#text/plain
 tests/webtbs/tw1416.pp svneol=native#text/plain
 tests/webtbs/tw1430.pp svneol=native#text/plain
