* fixed FloatToDecimal() for inf/nan (mantis #14143, thanks to     Sergei Gorelkin for the test program)
git-svn-id: trunk@13394 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -9191,6 +9191,7 @@ tests/webtbs/tw1409.pp svneol=native#text/plain
 tests/webtbs/tw1412.pp svneol=native#text/plain
 tests/webtbs/tw14134.pp svneol=native#text/plain
 tests/webtbs/tw1414.pp svneol=native#text/plain
+tests/webtbs/tw14143.pp svneol=native#text/plain
 tests/webtbs/tw1416.pp svneol=native#text/plain
 tests/webtbs/tw1430.pp svneol=native#text/plain
 tests/webtbs/tw1433.pp svneol=native#text/plain
