Initial commit for the FPVectorial library
git-svn-id: trunk@13403 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1726,6 +1726,18 @@ packages/fpmkunit/Makefile.fpc svneol=native#text/plain
 packages/fpmkunit/examples/ppu2fpmake.sh svneol=native#text/plain
 packages/fpmkunit/fpmake.pp svneol=native#text/plain
 packages/fpmkunit/src/fpmkunit.pp svneol=native#text/plain
+packages/fpvectorial/Makefile.fpc svneol=native#text/plain
+packages/fpvectorial/src/avisocncgcodereader.pas svneol=native#text/plain
+packages/fpvectorial/src/avisocncgcodewriter.pas svneol=native#text/plain
+packages/fpvectorial/src/avisozlib.pas svneol=native#text/plain
+packages/fpvectorial/src/fpvectorial.pas svneol=native#text/plain
+packages/fpvectorial/src/fpvectorial_pkg.lpk svneol=native#text/plain
+packages/fpvectorial/src/fpvectorial_pkg.pas svneol=native#text/plain
+packages/fpvectorial/src/fpvtocanvas.pas svneol=native#text/plain
+packages/fpvectorial/src/pdfvectorialreader.pas svneol=native#text/plain
+packages/fpvectorial/src/pdfvrlexico.pas svneol=native#text/plain
+packages/fpvectorial/src/pdfvrsemantico.pas svneol=native#text/plain
+packages/fpvectorial/src/pdfvrsintatico.pas svneol=native#text/plain
 packages/fv/Makefile svneol=native#text/plain
 packages/fv/Makefile.fpc svneol=native#text/plain
 packages/fv/examples/Makefile svneol=native#text/plain
