* makefile fixes (fpmake untested), 2.3.1 fields-before-methods fix for pdfvrlexico
git-svn-id: trunk@13405 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1726,10 +1726,13 @@ packages/fpmkunit/Makefile.fpc svneol=native#text/plain
 packages/fpmkunit/examples/ppu2fpmake.sh svneol=native#text/plain
 packages/fpmkunit/fpmake.pp svneol=native#text/plain
 packages/fpmkunit/src/fpmkunit.pp svneol=native#text/plain
+packages/fpvectorial/Makefile svneol=native#text/plain
 packages/fpvectorial/Makefile.fpc svneol=native#text/plain
+packages/fpvectorial/fpmake.pp svneol=native#text/plain
 packages/fpvectorial/src/avisocncgcodereader.pas svneol=native#text/plain
 packages/fpvectorial/src/avisocncgcodewriter.pas svneol=native#text/plain
 packages/fpvectorial/src/avisozlib.pas svneol=native#text/plain
+packages/fpvectorial/src/fpvectbuildunit.pas svneol=native#text/plain
 packages/fpvectorial/src/fpvectorial.pas svneol=native#text/plain
 packages/fpvectorial/src/fpvtocanvas.pas svneol=native#text/plain
 packages/fpvectorial/src/pdfvectorialreader.pas svneol=native#text/plain
