--- a/.gitattributes
+++ b/.gitattributes
@@ -9201,6 +9201,7 @@ tests/webtbs/tw14019.pp svneol=native#text/plain
 tests/webtbs/tw14020.pp svneol=native#text/plain
 tests/webtbs/tw14020a.pp svneol=native#text/plain
 tests/webtbs/tw14040.pp svneol=native#text/plain
+tests/webtbs/tw14067.pp svneol=native#text/plain
 tests/webtbs/tw1407.pp svneol=native#text/plain
 tests/webtbs/tw1408.pp svneol=native#text/plain
 tests/webtbs/tw1409.pp svneol=native#text/plain
