* set addn resultdef when evaluating constant string concatenation     instead of letting the resulting stringconstn decide for itself     (mantis #14174)
git-svn-id: trunk@13419 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -9211,6 +9211,7 @@ tests/webtbs/tw1414.pp svneol=native#text/plain
 tests/webtbs/tw14143.pp svneol=native#text/plain
 tests/webtbs/tw14155.pp svneol=native#text/plain
 tests/webtbs/tw1416.pp svneol=native#text/plain
+tests/webtbs/tw14174.pp svneol=native#text/plain
 tests/webtbs/tw1430.pp svneol=native#text/plain
 tests/webtbs/tw1433.pp svneol=native#text/plain
 tests/webtbs/tw1445.pp svneol=native#text/plain
