* Added Classes version of BZip2 Stream
git-svn-id: trunk@13430 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -927,7 +927,10 @@ packages/bzip2/Makefile.fpc svneol=native#text/plain
 packages/bzip2/examples/pasbzip.pas svneol=native#text/plain
 packages/bzip2/fpmake.pp svneol=native#text/plain
 packages/bzip2/src/bzip2.pas svneol=native#text/plain
+packages/bzip2/src/bzip2comn.pp svneol=native#text/plain
 packages/bzip2/src/bzip2i386.inc svneol=native#text/plain
+packages/bzip2/src/bzip2si386.inc svneol=native#text/plain
+packages/bzip2/src/bzip2stream.pp svneol=native#text/plain
 packages/cairo/Makefile svneol=native#text/plain
 packages/cairo/Makefile.fpc svneol=native#text/plain
 packages/cairo/fpmake.pp svneol=native#text/plain
