* fix from Nikolay Samofatov for #12987: initialize thread vars in libraries on windows correctly * unified dll entry code between win32 and win64
git-svn-id: trunk@13445 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -9144,6 +9144,8 @@ tests/webtbs/tw12894.pp svneol=native#text/plain
 tests/webtbs/tw12942.pp svneol=native#text/plain
 tests/webtbs/tw1295.pp svneol=native#text/plain
 tests/webtbs/tw12985.pp svneol=native#text/plain
+tests/webtbs/tw12987a.pp svneol=native#text/plain
+tests/webtbs/tw12987b.pp svneol=native#text/plain
 tests/webtbs/tw1299.pp svneol=native#text/plain
 tests/webtbs/tw12993.pp svneol=native#text/plain
 tests/webtbs/tw13015.pp svneol=native#text/plain
