+ utf-8 <-> variant type casts, resolves #11371 * ucs-4 -> variant type cast (variant -> ucs-4 is not possible due to overloading contraints of fpc and how ucs-4 is implemented) * some newlines fixed
git-svn-id: trunk@13451 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -9060,6 +9060,7 @@ tests/webtbs/tw1133.pp svneol=native#text/plain
 tests/webtbs/tw11349.pp svneol=native#text/plain
 tests/webtbs/tw11354.pp svneol=native#text/plain
 tests/webtbs/tw11369.pp svneol=native#text/plain
+tests/webtbs/tw11371.pp svneol=native#text/plain
 tests/webtbs/tw11372.pp svneol=native#text/plain
 tests/webtbs/tw11392.pp svneol=native#text/plain
 tests/webtbs/tw11431.pp svneol=native#text/plain
