--- Merging r13518 through r13520 into '.': U    packages/univint/Makefile.fpc U    packages/univint/src/CFHTTPMessage.pas A    packages/univint/src/CFNetworkErrorss.pas A    packages/univint/src/CFHTTPAuthentication.pas A    packages/univint/src/CFError.pas A    packages/univint/src/CFNetDiagnostics.pas U    packages/univint/src/Endian.pas A    packages/univint/src/DriverServices.pas A    packages/univint/src/CFProxySupport.pas U    packages/univint/src/CFNetServices.pas U    packages/univint/src/CFStream.pas U    packages/univint/src/MacOS.pas U    packages/univint/src/CFHTTPStream.pas U    packages/univint/src/CFSocketStream.pas A    packages/univint/src/TextInputSources.pas U    packages/univint/src/MacOSAll.pas U    packages/univint/Makefile
git-svn-id: branches/fixes_2_4@13562 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -4681,14 +4681,18 @@ packages/univint/src/CFData.pas svneol=native#text/plain
 packages/univint/src/CFDate.pas svneol=native#text/plain
 packages/univint/src/CFDateFormatter.pas svneol=native#text/plain
 packages/univint/src/CFDictionary.pas svneol=native#text/plain
+packages/univint/src/CFError.pas svneol=native#text/plain
 packages/univint/src/CFFTPStream.pas svneol=native#text/plain
+packages/univint/src/CFHTTPAuthentication.pas svneol=native#text/plain
 packages/univint/src/CFHTTPMessage.pas svneol=native#text/plain
 packages/univint/src/CFHTTPStream.pas svneol=native#text/plain
 packages/univint/src/CFHost.pas svneol=native#text/plain
 packages/univint/src/CFLocale.pas svneol=native#text/plain
 packages/univint/src/CFMachPort.pas svneol=native#text/plain
 packages/univint/src/CFMessagePort.pas svneol=native#text/plain
+packages/univint/src/CFNetDiagnostics.pas svneol=native#text/plain
 packages/univint/src/CFNetServices.pas svneol=native#text/plain
+packages/univint/src/CFNetworkErrorss.pas svneol=native#text/plain
 packages/univint/src/CFNotificationCenter.pas svneol=native#text/plain
 packages/univint/src/CFNumber.pas svneol=native#text/plain
 packages/univint/src/CFNumberFormatter.pas svneol=native#text/plain
@@ -4696,6 +4700,7 @@ packages/univint/src/CFPlugIn.pas svneol=native#text/plain
 packages/univint/src/CFPlugInCOM.pas svneol=native#text/plain
 packages/univint/src/CFPreferences.pas svneol=native#text/plain
 packages/univint/src/CFPropertyList.pas svneol=native#text/plain
+packages/univint/src/CFProxySupport.pas svneol=native#text/plain
 packages/univint/src/CFRunLoop.pas svneol=native#text/plain
 packages/univint/src/CFSet.pas svneol=native#text/plain
 packages/univint/src/CFSocket.pas svneol=native#text/plain
@@ -4795,6 +4800,7 @@ packages/univint/src/Drag.pas svneol=native#text/plain
 packages/univint/src/DrawSprocket.pas svneol=native#text/plain
 packages/univint/src/DriverFamilyMatching.pas svneol=native#text/plain
 packages/univint/src/DriverGestalt.pas svneol=native#text/plain
+packages/univint/src/DriverServices.pas svneol=native#text/plain
 packages/univint/src/DriverSynchronization.pas svneol=native#text/plain
 packages/univint/src/Endian.pas svneol=native#text/plain
 packages/univint/src/Events.pas svneol=native#text/plain
@@ -4925,6 +4931,7 @@ packages/univint/src/TextCommon.pas svneol=native#text/plain
 packages/univint/src/TextEdit.pas svneol=native#text/plain
 packages/univint/src/TextEncodingConverter.pas svneol=native#text/plain
 packages/univint/src/TextEncodingPlugin.pas svneol=native#text/plain
+packages/univint/src/TextInputSources.pas svneol=native#text/plain
 packages/univint/src/TextServices.pas svneol=native#text/plain
 packages/univint/src/TextUtils.pas svneol=native#text/plain
 packages/univint/src/Threads.pas svneol=native#text/plain
