--- Merging r13545 into '.': A    tests/webtbs/tw14363.pp U    compiler/i386/cpuinfo.pas
git-svn-id: branches/fixes_2_4@13569 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -9236,6 +9236,7 @@ tests/webtbs/tw14236.pp svneol=native#text/plain
 tests/webtbs/tw1430.pp svneol=native#text/plain
 tests/webtbs/tw14307.pp svneol=native#text/plain
 tests/webtbs/tw1433.pp svneol=native#text/plain
+tests/webtbs/tw14363.pp svneol=native#text/plain
 tests/webtbs/tw1445.pp svneol=native#text/plain
 tests/webtbs/tw1450.pp svneol=native#text/plain
 tests/webtbs/tw1451.pp svneol=native#text/plain
