* no longer perform precision correction for single precision values, because     we support writing more digits than are defined (due to Delphi-     compatibility) and    a) correcting the precision of undefined digits makes no sense    b) as a result, this precision correction made some numbers that can be       represented exactly in single precision inexact     -- fixes mantis #14230   * no longer perform precision correction while determining the whole part     of numbers (usually did nothing anyway, and the rest is caught by the     final rounding)
git-svn-id: trunk@13574 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -9233,6 +9233,7 @@ tests/webtbs/tw14149.pp svneol=native#text/plain
 tests/webtbs/tw14155.pp svneol=native#text/plain
 tests/webtbs/tw1416.pp svneol=native#text/plain
 tests/webtbs/tw14174.pp svneol=native#text/plain
+tests/webtbs/tw14230.pp svneol=native#text/plain
 tests/webtbs/tw14236.pp svneol=native#text/plain
 tests/webtbs/tw1430.pp svneol=native#text/plain
 tests/webtbs/tw14307.pp svneol=native#text/plain
