+ tests forgotten to commit as part of r13334
git-svn-id: trunk@13617 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8625,6 +8625,12 @@ tests/webtbf/tw1365.pp svneol=native#text/plain
 tests/webtbf/tw13815.pp svneol=native#text/plain
 tests/webtbf/tw1395.pp svneol=native#text/plain
 tests/webtbf/tw13956.pp svneol=native#text/plain
+tests/webtbf/tw13971a.pp svneol=native#text/plain
+tests/webtbf/tw13971b.pp svneol=native#text/plain
+tests/webtbf/tw13971c.pp svneol=native#text/plain
+tests/webtbf/tw13971d.pp svneol=native#text/plain
+tests/webtbf/tw13971e.pp svneol=native#text/plain
+tests/webtbf/tw13971f.pp svneol=native#text/plain
 tests/webtbf/tw13992.pp svneol=native#text/plain
 tests/webtbf/tw1407.pp svneol=native#text/plain
 tests/webtbf/tw14104a.pp svneol=native#text/plain
