--- a/.gitattributes
+++ b/.gitattributes
@@ -8221,6 +8221,7 @@ tests/test/tobjc10.pp svneol=native#text/plain
 tests/test/tobjc11.pp svneol=native#text/plain
 tests/test/tobjc12.pp svneol=native#text/plain
 tests/test/tobjc13.pp svneol=native#text/plain
+tests/test/tobjc14.pp svneol=native#text/plain
 tests/test/tobjc2.pp svneol=native#text/plain
 tests/test/tobjc3.pp svneol=native#text/plain
 tests/test/tobjc4.pp svneol=native#text/plain
